# ONNX-Runtime-Inference

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
data/models/: README.md
data/test_data/resnet18-v1-7/test_data_set_0/: input_0.pb  output_0.pb
data/test_data/squeezenet1.1-7/test_data_set_0/: input_0.pb  output_0.pb
docker/: onnxruntime-cpu.Dockerfile  onnxruntime-cuda-python.Dockerfile  onnxruntime-cuda.Dockerfile
python/: inference.py
src/: CMakeLists.txt  camera_fps.cpp  commons.h  inference.cpp  inference_camera.cpp  inference_cpu.cpp  inference_cuda.cpp  inference_multithread.cpp
